# bastion

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.githooks/: README.md  (+1 more)
crates/bastion/: Cargo.toml  build.rs
crates/bastion-backup/: Cargo.toml
crates/bastion-backup/src/: backup_encryption.rs  lib.rs  restore.rs
crates/bastion-backup/src/backup/: filesystem.rs  hashing_reader.rs  mod.rs  source_consistency.rs  sqlite.rs  vaultwarden.rs
crates/bastion-backup/src/backup/filesystem/: entries_index.rs  mod.rs  raw_tree.rs  scan.rs  source_snapshot.rs  tar.rs  test_hooks.rs  tests.rs  util.rs
crates/bastion-backup/src/backup/vaultwarden/: builder.rs  hash.rs  io.rs  mod.rs  tar.rs  tests.rs
crates/bastion-backup/src/restore/: access.rs  engine.rs  entries_index.rs  mod.rs  operations.rs  parts.rs  path.rs  raw_tree.rs  selection.rs  sinks.rs  sources.rs  tests.rs  unpack.rs  verify.rs
crates/bastion-backup/src/restore/entries_index/: fetch.rs  list.rs  mod.rs  types.rs
crates/bastion-backup/src/restore/operations/: mod.rs  progress.rs  restore.rs  util.rs  verify.rs
crates/bastion-core/: Cargo.toml
crates/bastion-core/src/: agent.rs  agent_protocol.rs  agent_stream.rs  backup_format.rs  backup_retention.rs  error_envelope.rs  execution_planner.rs  job_spec.rs  lib.rs  manifest.rs  progress.rs  run_failure.rs
crates/bastion-core/src/job_spec/: mod.rs  types.rs  v2.rs  validation.rs
crates/bastion-driver-registry/: Cargo.toml
crates/bastion-driver-registry/src/: builtins.rs  lib.rs  target_runtime.rs
crates/bastion-engine/: Cargo.toml
crates/bastion-engine/src/: agent_job_resolver.rs  agent_manager.rs  agent_snapshots.rs  bulk_operations.rs  cancel_registry.rs  error_envelope.rs  lib.rs  maintenance.rs  notifications.rs  run_events.rs  run_events_bus.rs  scheduler.rs  supervision.rs
crates/bastion-engine/src/notifications/: enqueue.rs  loop.rs  send.rs  template.rs
crates/bastion-engine/src/scheduler/: artifact_delete.rs  cron.rs  incomplete_cleanup.rs  mod.rs  queue.rs  retention.rs  snapshot_retention.rs  target_snapshot.rs  worker.rs
crates/bastion-http/: Cargo.toml  build.rs
crates/bastion-http/src/http/: agents.rs  agents_ingest_tests.rs  auth.rs  auth_tests.rs  bulk_operations.rs  bulk_operations_tests.rs  command_center.rs  command_center_tests.rs  control_plane.rs  control_plane_fleet_integrations_tests.rs  dashboard.rs  dashboard_tests.rs  docs.rs  error.rs  error_feedback_tests.rs  filter_multiselect_tests.rs  fleet.rs  fs.rs  integrations.rs  jobs.rs  jobs_archive_tests.rs  jobs_list_tests.rs  jobs_runs_tests.rs  jobs_workspace_tests.rs  list_paging.rs  middleware.rs  mod.rs  notifications.rs  observability_tests.rs  operations.rs  operations_tests.rs  retention_tests.rs  runs.rs  runs_tests.rs  runs_workspace_tests.rs  secrets.rs  settings.rs  shared.rs  snapshots_tests.rs  ui.rs  (+2 more)
crates/bastion-notify/: Cargo.toml
crates/bastion-notify/src/: lib.rs  smtp.rs  wecom.rs
crates/bastion-storage/: Cargo.toml
crates/bastion-storage/migrations/: 0001_init.sql  0002_login_throttle.sql  0006_agent_tasks.sql  0008_notification_management.sql  0009_secrets_node_scoped.sql  0010_incomplete_cleanup_management.sql  0011_jobs_schedule_timezone.sql  0012_agent_labels.sql  0013_bulk_operations.sql  0014_agent_config_sync_state.sql  0015_operation_subject_link.sql  0016_progress_snapshots.sql  0017_run_artifacts.sql  0018_artifact_delete_queue.sql  0019_run_artifacts_pinning.sql  0020_keyset_list_indexes.sql  0021_runs_operations_cancel.sql
crates/bastion-storage/src/: agent_labels_repo.rs  agent_tasks_repo.rs  agents_repo.rs  bulk_operations_repo.rs  db.rs  hub_runtime_config_repo.rs  jobs_repo.rs  lib.rs  notification_destinations_repo.rs  notifications_repo.rs  notifications_settings_repo.rs  run_artifacts_repo.rs  runs_repo.rs  secrets.rs  secrets_repo.rs  settings_repo.rs
crates/bastion-storage/src/artifact_delete_repo/: claim.rs  events.rs  mod.rs  queries.rs  tests.rs  transitions.rs  types.rs
crates/bastion-storage/src/auth/: mod.rs  password.rs  sessions.rs  throttle.rs  users.rs
crates/bastion-storage/src/incomplete_cleanup_repo/: claim.rs  events.rs  mod.rs  queries.rs  tests.rs  transitions.rs  types.rs
crates/bastion-storage/src/jobs_repo/: mod.rs  repo.rs  tests.rs  types.rs
crates/bastion-storage/src/notifications_repo/: claim.rs  enqueue.rs  mod.rs  queries.rs  transitions.rs
crates/bastion-storage/src/operations_repo/: mod.rs  repo.rs  tests.rs  types.rs
crates/bastion-storage/src/runs_repo/: events.rs  maintenance.rs  mod.rs  runs.rs  tests.rs  types.rs
crates/bastion-storage/src/secrets/: crypto.rs  io.rs  keypack.rs  keyring.rs  mod.rs  tests.rs
crates/bastion-targets/: Cargo.toml
crates/bastion-targets/src/: lib.rs  local_dir.rs  webdav.rs  webdav_client.rs
crates/bastion/migrations/: 0003_notifications.sql  0004_operations.sql  0005_jobs_agent_id.sql  0007_runs_indexes.sql
crates/bastion/src/: agent_client.rs  agent_manager.rs  agent_protocol.rs  agent_tasks_repo.rs  agents_repo.rs  auth.rs  backup_encryption.rs  config.rs  data_dir.rs  db.rs  job_spec.rs  jobs_repo.rs  logging.rs  main.rs  maintenance.rs  notifications.rs  notifications_repo.rs  operations_repo.rs  restore.rs  run_events.rs  run_events_bus.rs  run_failure.rs  runs_repo.rs  scheduler.rs  secrets.rs  secrets_repo.rs  smtp.rs  webdav.rs  wecom.rs  win_service.rs  win_tray.rs
crates/bastion/src/agent_client/: connect.rs  fs_list.rs  hub_stream.rs  identity.rs  managed.rs  mod.rs  offline.rs  restore_task.rs  snapshot_delete.rs  targets.rs  tasks.rs  util.rs  webdav_list.rs
crates/bastion/src/backup/: filesystem.rs  mod.rs  sqlite.rs  vaultwarden.rs
crates/bastion/src/http/: agents.rs  auth.rs  error.rs  error_feedback_tests.rs  jobs.rs  middleware.rs  mod.rs  operations.rs  secrets.rs  shared.rs  ws_tests.rs
crates/bastion/src/i18n/: cli.rs  cli.zh-CN.json
crates/bastion/src/logging/: file_config.rs  mod.rs  prune.rs  suffix.rs  tests.rs
crates/bastion/src/targets/: local_dir.rs  mod.rs  webdav.rs
(+1507 files in other folders)
