[workspace]
resolver = "3"
members = [
  "crates/bastion", "crates/bastion-backup", "crates/bastion-config",
  "crates/bastion-core", "crates/bastion-engine", "crates/bastion-http", "crates/bastion-notify", "crates/bastion-storage", "crates/bastion-targets",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
# Optimize for smaller/faster release artifacts (portable archives + packages).
lto = "thin"
codegen-units = 1
strip = "symbols"
