[workspace]
resolver = "3"
members = [
  "crates/bastion", "crates/bastion-backup", "crates/bastion-config",
  "crates/bastion-core", "crates/bastion-engine", "crates/bastion-http", "crates/bastion-notify", "crates/bastion-storage", "crates/bastion-targets",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = "0.4.42"
chrono-tz = "0.10.4"
cron = "0.15.0"
futures-util = "0.3.31"
globset = "0.4.16"
iana-time-zone = "0.1.64"
ipnet = "2.11.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = "0.8.6"
tempfile = "3.23.0"
time = "0.3.44"
tokio = "1.47.1"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.16"
tracing = "0.1.41"
url = "2.5.7"
uuid = "1.18.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
# Optimize for smaller/faster release artifacts (portable archives + packages).
lto = "thin"
codegen-units = 1
strip = "symbols"
