[workspace]
resolver = "3"
members = [
  "crates/bastion", "crates/bastion-backup", "crates/bastion-config",
  "crates/bastion-core", "crates/bastion-driver-api", "crates/bastion-driver-registry", "crates/bastion-engine", "crates/bastion-http", "crates/bastion-notify", "crates/bastion-storage", "crates/bastion-targets",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.6"
base64 = "0.22.1"
blake3 = "1.8.3"
chrono = "0.4.44"
chrono-tz = "0.10.4"
cron = "0.15.0"
futures-util = "0.3.32"
globset = "0.4.16"
iana-time-zone = "0.1.65"
ipnet = "2.12.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false }
tempfile = "3.27.0"
time = "0.3.44"
tokio = "1.50.0"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.18"
tracing = "0.1.41"
url = "2.5.8"
uuid = "1.23.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
# Optimize for smaller/faster release artifacts (portable archives + packages).
lto = "thin"
codegen-units = 1
strip = "symbols"
