[package]
name = "bastion-backup"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bastion-core = { path = "../bastion-core" }
bastion-storage = { path = "../bastion-storage" }
bastion-targets = { path = "../bastion-targets" }
age = "0.11.2"
anyhow.workspace = true
blake3.workspace = true
base64.workspace = true
filetime = "0.2.26"
globset.workspace = true
rusqlite = { version = "0.32.1", features = ["backup"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tar = "0.4.44"
time = { workspace = true, features = ["formatting", "macros", "serde"] }
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", default-features = false, features = ["fs", "user"] }
xattr = "1.6.1"

[target.'cfg(windows)'.dependencies]
file-id = "0.2.3"

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
tempfile.workspace = true

[lints]
workspace = true
