[package]
name = "bastion-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
globset = "0.4.16"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
