[package]
name = "bastion-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64.workspace = true
globset.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
