[package]
name = "bastion-engine"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bastion-core = { path = "../bastion-core" }
bastion-backup = { path = "../bastion-backup" }
bastion-notify = { path = "../bastion-notify" }
bastion-storage = { path = "../bastion-storage" }
bastion-targets = { path = "../bastion-targets" }
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
cron = "0.15.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
time = { version = "0.3.44", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
