[package]
name = "bastion-engine"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bastion-core = { path = "../bastion-core" }
bastion-backup = { path = "../bastion-backup" }
bastion-notify = { path = "../bastion-notify" }
bastion-storage = { path = "../bastion-storage" }
bastion-targets = { path = "../bastion-targets" }
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
time = { workspace = true, features = ["formatting", "macros", "serde"] }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
