[package]
name = "bastion-http"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bastion-backup = { path = "../bastion-backup" }
bastion-config = { path = "../bastion-config" }
bastion-core = { path = "../bastion-core" }
bastion-engine = { path = "../bastion-engine" }
bastion-notify = { path = "../bastion-notify" }
bastion-storage = { path = "../bastion-storage" }
bastion-targets = { path = "../bastion-targets" }
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
blake3.workspace = true
futures-util.workspace = true
include_dir = { version = "0.7.4", optional = true }
mime_guess = "2.0.5"
serde.workspace = true
serde_json.workspace = true
chrono-tz.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
time = { workspace = true, features = ["formatting", "macros", "serde"] }
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true, features = ["io"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
tempfile.workspace = true
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tower = "0.5.2"

[features]
default = []
embed-ui = ["dep:include_dir"]
embed-docs = ["dep:include_dir"]

[lints]
workspace = true
