[package]
name = "bastion-notify"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "ring", "webpki-roots"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
