[package]
name = "bastion-notify"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "ring", "webpki-roots"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
