[package]
name = "bastion-storage"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bastion-core = { path = "../bastion-core" }
anyhow.workspace = true
argon2 = "0.5.3"
base64.workspace = true
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
time = { workspace = true, features = ["formatting", "macros", "serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
