[package]
name = "bastion-targets"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bastion-core = { path = "../bastion-core" }
anyhow = "1.0.100"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "stream"] }
roxmltree = "0.20.0"
httpdate = "1.0.3"
percent-encoding = "2.3.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tempfile = "3.23.0"

[lints]
workspace = true
