[package]
name = "bastion-targets"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bastion-core = { path = "../bastion-core" }
anyhow.workspace = true
blake3.workspace = true
futures-util.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "stream"] }
roxmltree = "0.20.0"
httpdate = "1.0.3"
percent-encoding = "2.3.2"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["io"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
tempfile.workspace = true

[lints]
workspace = true
