[package]
name = "bastion"
version = "0.1.0"
edition = "2024"

[dependencies]
bastion-core = { path = "../bastion-core" }
bastion-backup = { path = "../bastion-backup" }
bastion-config = { path = "../bastion-config" }
bastion-engine = { path = "../bastion-engine" }
bastion-http = { path = "../bastion-http" }
bastion-storage = { path = "../bastion-storage" }
bastion-targets = { path = "../bastion-targets" }
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.48", features = ["derive", "env"] }
futures-util = "0.3.31"
ipnet = "2.11.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
base64 = "0.22.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
cron = "0.15.0"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = []
embed-ui = ["bastion-http/embed-ui"]

[dev-dependencies]
tempfile = "3.23.0"
