[package]
name = "bastion"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Bastion backup server"
repository = "https://github.com/Syt100/bastion"

[dependencies]
bastion-core = { path = "../bastion-core" }
bastion-backup = { path = "../bastion-backup" }
bastion-config = { path = "../bastion-config" }
bastion-engine = { path = "../bastion-engine" }
bastion-http = { path = "../bastion-http" }
bastion-storage = { path = "../bastion-storage" }
bastion-targets = { path = "../bastion-targets" }
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.48", features = ["derive", "env"] }
futures-util = "0.3.31"
ipnet = "2.11.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
base64 = "0.22.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
cron = "0.15.0"
uuid = { version = "1.18.1", features = ["v4"] }
iana-time-zone = "0.1.64"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"

[features]
default = []
embed-ui = ["bastion-http/embed-ui"]
embed-docs = ["bastion-http/embed-docs"]
embed-web = ["embed-ui", "embed-docs"]

[dev-dependencies]
tempfile = "3.23.0"

# Packaging metadata used by GitHub release workflows.
# We keep packages minimal (just the `bastion` binary + docs).
[package.metadata.deb]
maintainer = "Bastion Contributors <noreply@github.com>"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["../../target/release/bastion", "usr/bin/bastion", "755"],
  ["../../packaging/linux/bastion.service", "lib/systemd/system/bastion.service", "644"],
  ["../../packaging/linux/bastion.env", "etc/bastion/bastion.env", "640"],
  ["../../LICENSE", "usr/share/doc/bastion/LICENSE", "644"],
  ["../../README.md", "usr/share/doc/bastion/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "../../target/release/bastion", dest = "/usr/bin/bastion", mode = "755" },
  { source = "../../packaging/linux/bastion.service", dest = "/usr/lib/systemd/system/bastion.service", mode = "644" },
  { source = "../../packaging/linux/bastion.env", dest = "/etc/bastion/bastion.env", mode = "640" },
  { source = "../../LICENSE", dest = "/usr/share/doc/bastion/LICENSE", mode = "644" },
  { source = "../../README.md", dest = "/usr/share/doc/bastion/README.md", mode = "644" },
]
