[package]
name = "bastion"
version = "0.1.0"
edition = "2024"
default-run = "bastion"
license = "Apache-2.0"
description = "Self-hosted backup orchestrator"
repository = "https://github.com/Syt100/bastion"

[dependencies]
bastion-core = { path = "../bastion-core" }
bastion-backup = { path = "../bastion-backup" }
bastion-config = { path = "../bastion-config" }
bastion-engine = { path = "../bastion-engine" }
bastion-http = { path = "../bastion-http" }
bastion-storage = { path = "../bastion-storage" }
bastion-targets = { path = "../bastion-targets" }
anyhow.workspace = true
axum.workspace = true
clap = { version = "4.5.48", features = ["derive", "env"] }
futures-util.workspace = true
ipnet.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url.workspace = true
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
uuid = { workspace = true, features = ["v4"] }
iana-time-zone.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"

[features]
default = []
embed-ui = ["bastion-http/embed-ui"]
embed-docs = ["bastion-http/embed-docs"]
embed-web = ["embed-ui", "embed-docs"]

[dev-dependencies]
tempfile.workspace = true

# Packaging metadata used by GitHub release workflows.
# We keep packages minimal (just the `bastion` binary + docs).
[package.metadata.deb]
maintainer = "Bastion Contributors <noreply@github.com>"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["../../target/release/bastion", "usr/bin/bastion", "755"],
  ["../../packaging/linux/bastion.service", "lib/systemd/system/bastion.service", "644"],
  ["../../packaging/linux/bastion.env", "etc/bastion/bastion.env", "640"],
  ["../../LICENSE", "usr/share/doc/bastion/LICENSE", "644"],
  ["../../README.md", "usr/share/doc/bastion/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "../../target/release/bastion", dest = "/usr/bin/bastion", mode = "755" },
  { source = "../../packaging/linux/bastion.service", dest = "/usr/lib/systemd/system/bastion.service", mode = "644" },
  { source = "../../packaging/linux/bastion.env", dest = "/etc/bastion/bastion.env", mode = "640" },
  { source = "../../LICENSE", dest = "/usr/share/doc/bastion/LICENSE", mode = "644" },
  { source = "../../README.md", dest = "/usr/share/doc/bastion/README.md", mode = "644" },
]
